--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -36,19 +36,37 @@
 </nav>
 
 <div class="container-fluid">
-    {% if grade > 80 %}
+    {% if grade > 0.8 %}
     <div class="alert alert-success">
-       <!--HINT Display passed info -->
+       <b>Congratulations, {{ user.username }}!</b>
+           You have passed the exam and completed the course with score {{ grade_to_print }}
     </div>
         {% else %}
         <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+            <b>Failed</b> Sorry, {{ user.username }}! You have failed exam with score {{ grade_to_print }}
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
+            {% for question in  lesson.question_set.all %}
+            <div class="card">
+                <div class="card-header">{{ question.question_text }}</div>
+                <div class="card-body">
+                    {% for choice in question.choice_set.all %}
+                        {% if choice.is_correct and choice in selected_ids %}
+                            <p class="text-success">Correct: {{ choice.choice_text }}</p>
+                        {% elif choice.is_correct and choice not in selected_ids %}
+                            <p class="text-warning">Not selected: {{ choice.choice_text }}</p>
+                        {% elif not choice.is_correct and choice in selected_ids %}
+                            <p class="text-danger">Incorrect: {{ choice.choice_text }}</p>
+                        {% else %}
+                            <p>{{ choice.choice_text }}</p>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </body>
